--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
 
 dependencies:
   pre:
-    - sudo pip install docker-compose
+    - sudo pip install docker-compose==1.9.0
 
 test:
   override:
@@ -15,10 +15,11 @@ test:
 
 deployment:
   hub:
-    branch: [circle_ci_publish, master]
+    branch: /.*/
     commands:
       - docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
       - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
       - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:latest
       - docker push $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
       - docker push $DOCKER_HUB_USER_ID/dockerapp:latest
+      
